feat: add inventory
